--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -14,4 +14,5 @@
     <!--colors for card-->
     <color name="whiteCardColor">#FFF</color>
     <color name="white">#FFF</color>
+    <color name="formBackgroundColor">#FFFFFF</color>
 </resources>
