--- a/app/src/main/res/layout/item_complaint.xml
+++ b/app/src/main/res/layout/item_complaint.xml
@@ -40,6 +40,10 @@
                 android:id="@+id/statusIcon"
                 android:layout_width="32dp"
                 android:layout_height="32dp"
+                android:clickable="true"
+                android:src="@drawable/pending"
+                android:visibility="visible"
+                android:layout_marginBottom="20dp"
                 app:layout_constraintBottom_toTopOf="@+id/upvoteIcon"
                 app:layout_constraintEnd_toEndOf="@+id/titleTextView"
                 app:layout_constraintTop_toTopOf="parent" />
